--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -115,12 +115,12 @@
                     </div>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-md-2"></div>
-                    <div class="col-md-8">
+                    <div class="col-md-1"></div>
+                    <div class="col-md-10">
                         <div class="row">
-                            <div class="col-md-6 mb-2">
+                            <div class="col-md-4 mt-3">
                                     <div class="card">
-                                        <img src="https://via.placeholder.com/150" class="card-img-top" alt="Thumbnail">
+                                        <img src="https://via.placeholder.com/50" class="card-img-top" alt="Thumbnail">
                                         <div class="card-body">
                                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                                             <div class="d-flex justify-content-between align-items-center">
@@ -133,9 +133,10 @@
                                         </div>
                                     </div>
                             </div>
-                            <div class="col-md-6 mb-2">
+                            <div class="col-md-1"></div>
+                            <div class="col-md-4 mt-3">
                                 <div class="card">
-                                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Thumbnail">
+                                    <img src="https://via.placeholder.com/50" class="card-img-top" alt="Thumbnail">
                                     <div class="card-body">
                                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                                         <div class="d-flex justify-content-between align-items-center">
@@ -148,9 +149,10 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 mb-2">
+                            <div class="col-md-1"></div>
+                            <div class="col-md-4 mt-3">
                                 <div class="card">
-                                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Thumbnail">
+                                    <img src="https://via.placeholder.com/50" class="card-img-top" alt="Thumbnail">
                                     <div class="card-body">
                                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                                         <div class="d-flex justify-content-between align-items-center">
@@ -163,9 +165,10 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 mb-2">
+                            <div class="col-md-1"></div>
+                            <div class="col-md-4 mt-3">
                                 <div class="card">
-                                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Thumbnail">
+                                    <img src="https://via.placeholder.com/50" class="card-img-top" alt="Thumbnail">
                                     <div class="card-body">
                                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                                         <div class="d-flex justify-content-between align-items-center">
@@ -180,7 +183,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-2"></div>
+                    <div class="col-md-1"></div>
                 </div>
             </main>
         </div>
